--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
         <div class="thumb">
             <div class="thumb-item">
-                <img src="/img/img1.jpg" alt="img1">
+                <img src="./img/img1.jpg" alt="img1">
                 <div class="content">
                     <h3>Bali</h3>
                     <p>Visite Bali</p>
@@ -80,7 +80,7 @@
             </div>
 
             <div class="thumb-item">
-                <img src="/img/img2.jpg" alt="img1">
+                <img src="./img/img2.jpg" alt="img1">
                 <div class="content">
                     <h3>Paris</h3>
                     <p>Visite Paris</p>
@@ -88,7 +88,7 @@
             </div>
 
             <div class="thumb-item">
-                <img src="/img/img3.jpg" alt="img1">
+                <img src="./img/img3.jpg" alt="img1">
                 <div class="content">
                     <h3>Roma</h3>
                     <p>Visite Roma</p>
@@ -96,7 +96,7 @@
             </div>
 
             <div class="thumb-item">
-                <img src="/img/img4.jpg" alt="img1">
+                <img src="./img/img4.jpg" alt="img1">
                 <div class="content">
                     <h3>Veneza</h3>
                     <p>Visite Veneza</p>
